# sdd-orchestrator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-jp.md  CONTRIBUTING.md  LICENSE.md  README-jp.md  README.md  Taskfile.yml  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/agents/: debug.md
.claude/commands/: commit.md  inv.md  plan-en.md  plan.md  release.md  test-fix.md
.gemini/: settings.json
.kiro/: logs  sdd-orchestrator.json
.kiro/concepts/: new-workflow-concept.md
.kiro/steering/: debugging.md  design-principles.md  e2e-testing.md  logging.md  operations.md  product.md  skill-reference.md  structure.md  symbol-semantic-map.md  tech.md  verification-commands.md  verification.md  web-e2e-testing.md
articles/: wdio-electron-service-session-not-created-error.md
docs/: BOOTSTRAP.md  debatex-integration-request.md  ui-overview.md  ui-wireframe.html  ux-ui-review.md
docs/future-concepts/: ai-design-principles-adoption.md  electron-vs-web-feature-comparison.md  gemini-cli-document-review-delegation.md  git-worktree-support.md  mcp-server.md  openai-codex-integration.md  parallel-implementation-and-ssot.md  remote-ui-typescript-migration.md  skill-migration-feasibility.md  steering-context-optimization.md  (+1 more)
electron-sdd-manager/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.remote.ts  vite.config.ts  vitest.config.ts  wdio.conf.ts
scripts/: cleanup-zombie-electrons.sh  electron-app.sh  format-logs.ts  sdd
(+2832 files in other folders)
